--- a/app/src/main/res/layout/activity_list_item.xml
+++ b/app/src/main/res/layout/activity_list_item.xml
@@ -9,62 +9,34 @@
     tools:layout_editor_absoluteY="81dp"
     android:rowCount="2"
     android:columnCount="2"
-    >
+    android:layout_columnWeight="1"
+    android:gravity="fill">
 
-    <GridLayout
-        android:layout_width="184dp"
-        android:layout_height="100dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp"
+    <RadioButton
+        android:id="@+id/radioButton2"
+        android:text="@string/button_message"
+        android:layout_column="0"
+        android:layout_row="0"
+        />
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:text="@string/checkbox_message"
+        android:layout_column="1"
+        android:layout_row="0"
+        />
+    <Switch
+        android:id="@+id/switch1"
+        android:text="@string/switch_message"
+        android:layout_column="0"
+        android:layout_row="1"
+        android:layout_width="191dp"
+        />
 
-        >
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="191dp"
+        android:layout_column="1"
+        android:layout_row="1"
+        android:src="@android:drawable/ic_menu_camera" />
 
-        <RadioButton
-            android:id="@+id/radioButton2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/button_message" />
-    </GridLayout>
-
-    <GridLayout
-        android:layout_width="184dp"
-        android:layout_height="100dp"
-        tools:layout_editor_absoluteX="192dp"
-        tools:layout_editor_absoluteY="8dp">
-
-        <CheckBox
-            android:id="@+id/checkBox"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/checkbox_message"/>
-    </GridLayout>
-
-    <GridLayout
-        android:layout_width="184dp"
-        android:layout_height="100dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="108dp">
-
-        <Switch
-            android:id="@+id/switch1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/switch_message" />
-    </GridLayout>
-
-    <GridLayout
-        android:layout_width="184dp"
-        android:layout_height="100dp"
-        tools:layout_editor_absoluteX="192dp"
-        tools:layout_editor_absoluteY="108dp"
-
-
-        >
-
-        <ImageButton
-            android:id="@+id/imageButton"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@android:drawable/ic_menu_camera" />
-    </GridLayout>
 </GridLayout>
