--- a/app/src/main/res/layout/activity_chat_window.xml
+++ b/app/src/main/res/layout/activity_chat_window.xml
@@ -1,66 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_alignParentEnd="true"
-    android:layout_alignParentStart="true"
-    android:layout_alignParentTop="true"
     tools:context="com.example.algonquin.androidlabs.ChatWindow">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity" >
+    <ListView
+    android:id="@+id/listview"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentTop="true"
+    android:layout_above="@+id/text_message">
 
-        <ListView
-            android:id="@+id/listview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"></ListView>
+    </ListView>
 
+    <EditText
+    android:id="@+id/text_message"
+    android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentBottom="true"
+    android:background="#cccccc"
+    android:layout_toLeftOf="@+id/send_button"
+    android:imeOptions="actionSend"
+    android:layout_alignTop="@+id/send_button" />
 
-        <!--<TextView-->
-            <!--android:id="@+id/text_message"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentStart="true"-->
-            <!--android:layout_alignParentBottom="true"-->
-            <!--android:background="#cccccc"-->
-            <!--android:text="Message"-->
-            <!--android:layout_toLeftOf="@+id/send_button"-->
-            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
-            <!--android:textColor="#fff"-->
-            <!--android:layout_alignTop="@+id/send_button" />-->
+    <Button
+    android:id="@+id/send_button"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentEnd="true"
+    android:layout_alignParentBottom="true"
+    android:background="#808080"
+    android:text="Send"
+    android:textAppearance="?android:attr/textAppearanceMedium"
+    android:textColor="#fff" />
 
-        <EditText
-            android:id="@+id/text_message"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:background="#cccccc"
-            android:layout_toLeftOf="@+id/send_button"
-            android:inputType="text"
-            android:layout_alignTop="@+id/send_button" />
+</RelativeLayout>
 
-
-        <Button
-            android:id="@+id/send_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:background="#808080"
-            android:text="Send"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#fff" />
-
-
-    </RelativeLayout>
-
-
-
-</android.support.constraint.ConstraintLayout>
